fix: fix quotes, code blocks, page title

--- a/content/pages/service.mdx
+++ b/content/pages/service.mdx
@@ -15,36 +15,36 @@ from the following sources:
 <div style={{ display: 'grid', gridTemplateColumns: '150px 1fr', gap: '2rem 1rem' }}>
 
 
-![TAPoR logo](/assets/images/source_TAPoR_logo.png "TAPoR logo")
+![TAPoR logo](/assets/images/source_TAPoR_logo.png 'TAPoR logo')
 
 [TAPoR](http://tapor.ca/home) is a long-standing gateway to tools used for text
 analysis and retrieval.
 
-![Programming Historian logo](/assets/images/ph-en.svg "Programming Historian logo")
+![Programming Historian logo](/assets/images/ph-en.svg 'Programming Historian logo')
 
 The [Programming Historian](https://programminghistorian.org/) publishes
 novice-friendly, peer-reviewed tutorials that help humanists learn a wide range
 of digital tools, techniques, and workflows to facilitate research and teaching.
 
-![Standardization Survival Kit logo](/assets/images/source_ssk_logo.svg "Standardization Survival Kit logo")
+![Standardization Survival Kit logo](/assets/images/source_ssk_logo.svg 'Standardization Survival Kit logo')
 
 The [Standardisation Survival Kit](http://ssk.huma-num.fr/#/) presents a
 collection of research use case scenarios illustrating best practices in Digital
 Humanities and Heritage research.
 
-![Language Resource Switchboard logo](/assets/images/source_switchboard_logo.png "Language Resource Switchboard logo")
+![Language Resource Switchboard logo](/assets/images/source_switchboard_logo.png 'Language Resource Switchboard logo')
 
 The [Language Resource Switchboard](https://switchboard.clarin.eu/) helps you
 find tools that can process your data.
 
-![dblp computer science bibliography logo](/assets/images/source_dblp_logo_320x120.png "dblp computer science bibliography logo")
+![dblp computer science bibliography logo](/assets/images/source_dblp_logo_320x120.png 'dblp computer science bibliography logo')
 
 The [dblp computer science bibliography](https://dblp.org/) provides open
 bibliographic information on major computer science journals and
 proceedings. Only a subset of publications related to digital humanities is
 being ingested in the SSH Open Marketplace.
 
-![EOSC logo](/assets/images/source_eosc_logo.png "EOSC logo")
+![EOSC logo](/assets/images/source_eosc_logo.png 'EOSC logo')
 
 The [EOSC Portal catalogue & marketplace](https://marketplace.eosc-portal.eu/)
 is an integrated platform that allows easy access to plenty of services and
@@ -57,8 +57,8 @@ is being ingested in the SSH Open Marketplace.
 
 Linguistic, social sciences and cultural heritage sources will be added in 2021.
 Manual and individual additions of content is also a way to further populate the
-SSH Open Marketplace. More details are provided in the “How is this website
-curated?” section below.
+SSH Open Marketplace. More details are provided in the "How is this website
+curated?" section below.
 
 ## Types of content
 
@@ -68,7 +68,7 @@ content led to the identification of 5 main types of content:
 <div style={{ display: 'grid', gridTemplateColumns: '60px 1fr', columnGap: '1rem' }}>
 
 
-![Tool or service](/assets/images/categories/tool-or-service.svg "Tool or service logo")
+![Tool or service](/assets/images/categories/tool-or-service.svg 'Tool or service logo')
 
 <div>
 
@@ -89,7 +89,7 @@ graphs and networks
 <div style={{ display: 'grid', gridTemplateColumns: '60px 1fr', columnGap: '1rem' }}>
 
 
-![Training Material](/assets/images/categories/training-material.svg "Training Material")
+![Training Material](/assets/images/categories/training-material.svg 'Training Material')
 
 <div>
 
@@ -98,7 +98,7 @@ graphs and networks
 
 Tutorials, lessons or didactic resources explaining how to perform an action or
 highlighting the learning outcomes one would gain from engaging with the
-material. Example: The lesson “Beginner's Guide to Twitter Data” coming from the
+material. Example: The lesson "Beginner's Guide to Twitter Data" coming from the
 Programming Historian website.
 
 </div>
@@ -108,7 +108,7 @@ Programming Historian website.
 <div style={{ display: 'grid', gridTemplateColumns: '60px 1fr', columnGap: '1rem' }}>
 
 
-![Workflow](/assets/images/categories/workflow.svg "Workflow logo")
+![Workflow](/assets/images/categories/workflow.svg 'Workflow logo')
 
 <div>
 
@@ -116,10 +116,10 @@ Programming Historian website.
 ### Workflows
 
 A research workflow is a sequence of operation/steps performed on research data
-during their lifecycle. It can be seen as a recipe, as it was “designed” in the
+during their lifecycle. It can be seen as a recipe, as it was "designed" in the
 Standardisation Survival Kit. This workflow can be achieved by using diverse
 tools and facilities, and useful resources are connected to each step. Example:
-“Extract textual content from images” is a workflow composed of 13 steps coming
+"Extract textual content from images" is a workflow composed of 13 steps coming
 from the Standardization Survival Kit.
 
 </div>
@@ -129,7 +129,7 @@ from the Standardization Survival Kit.
 <div style={{ display: 'grid', gridTemplateColumns: '60px 1fr', columnGap: '1rem' }}>
 
 
-![Dataset](/assets/images/categories/dataset.svg "Dataset logo")
+![Dataset](/assets/images/categories/dataset.svg 'Dataset logo')
 
 <div>
 
@@ -148,7 +148,7 @@ Parlamint 1.0
 <div style={{ display: 'grid', gridTemplateColumns: '60px 1fr', columnGap: '1rem' }}>
 
 
-![Publication](/assets/images/categories/publication.svg "Publication logo")
+![Publication](/assets/images/categories/publication.svg 'Publication logo')
 
 <div>
 
@@ -157,10 +157,10 @@ Parlamint 1.0
 
 Research results published in an academic journal or repository. In the SSH Open
 Marketplace, only publications that can be connected to other resources are
-referenced. We don’t aim at collecting all the research papers in SSH, but only
+referenced. We don't aim at collecting all the research papers in SSH, but only
 to reinforce the contextualisation of our resources, offering perspectives in
 which a tool has been used and cited in a paper for exemple. Example:
-“PoetryLab. An Open Source Toolkit for the Analysis of Spanish Poetry Corpora”
+"PoetryLab. An Open Source Toolkit for the Analysis of Spanish Poetry Corpora"
 is a Conference Paper presented during the DH2020 Conference in which you can
 find an example of use of the SpaCy library (referenced as a tool in the SSH
 Open Marketplace).
@@ -175,20 +175,20 @@ In this beta version of the SSH Open Marketplace, you can:
 
 - search among the resources, refining what you are looking for through faceted
   search
-  ![screenshot search resources](/assets/images/search-refine-screenshot.png "screenshot search resources")
+  ![screenshot search resources](/assets/images/search-refine-screenshot.png 'screenshot search resources')
 - browse the content, by activities or keywords
-  ![browsing screenshot](/assets/images/browse_activities_screenshot.png "browsing screenshot")
+  ![browsing screenshot](/assets/images/browse_activities_screenshot.png 'browsing screenshot')
 - obtain a detailed view of every item registered in the website, including a
   structured set of metadata describing the resource, and highlighting the
   related items to facilitate the discovery of relevant resources
-  ![detailed view screenshot](/assets/images/details-related-screenshot.jpg "detailed view screenshot")
+  ![detailed view screenshot](/assets/images/details-related-screenshot.jpg 'detailed view screenshot')
 - report issues. While waiting for more community features – such as the
   editorial components or the comments section – to be implemented in 2021, the
   beta release of the SSH Open Marketplace offers you the possibility to report
   issues on every page of the website. Help us to improve our content or to
   report a bug, using this temporary functionality!
 - re-use the SSH Open Marketplace content using the Application programming
-  Interface (API). See the API documentation in the “technical aspects” section,
+  Interface (API). See the API documentation in the "technical aspects" section,
   if you want to know more.
 
 ## Content Curation Guidelines
@@ -202,7 +202,7 @@ Marketplace, we curate and enrich them thanks to a hybrid approach: automatic
 checks are run on the ingested data, followed by manual review of the identified
 problems as well as of aspects that cannot be checked automatically. In this
 process, contributors and moderators are playing an essential role (see below
-“How to contribute” section).
+"How to contribute" section).
 
 ### Curation Criteria
 
@@ -252,7 +252,7 @@ content description will be added soon!
 
 In a few months, you will be able to suggest new content in the SSH Open
 Marketplace, but also to propose changes to existing items, via user-friendly
-edit forms. In the meantime, you can use the “report an issue” function
+edit forms. In the meantime, you can use the "report an issue" function
 available on all pages of the website to improve our content or to report a bug.
 
 To stay tuned and updated about the developments, and to be aware of events and
@@ -263,7 +263,7 @@ hands-on sessions organised in 2021, join our community of testers,
 
 Towards the end of 2021, the editorial board of the SSH Open Marketplace will
 also be created! Its mission is to ensure the quality of the Marketplace content
-by reviewing new items and ensuring the editorial policy’s implementation.
+by reviewing new items and ensuring the editorial policy's implementation.
 Moderators are key actors of the SSH Open Marketplace! Let us know if you would
 be interested to join the SSH Open Marketplace editorial board!
 
