--- a/content/pages/about.mdx
+++ b/content/pages/about.mdx
@@ -1,6 +1,7 @@
 ---
 title: What is the SSH Open Marketplace?
 ---
+
 The Social Sciences and Humanities Open Marketplace, built as part of the
 [Social Sciences and Humanities Open Cloud project (SSHOC)](https://www.sshopencloud.eu/),
 is a discovery portal which pools and contextualises resources for Social
@@ -15,18 +16,18 @@ scheduled for December 2021.
 
 ## Key aspects
 
-* **Curation** – This portal thrives on a curation process that makes it easy to
+- **Curation** – This portal thrives on a curation process that makes it easy to
   discover the most appropriate results for each request, so that researchers
   can discover the best resources for the digital aspects of their work. The
   curation process relies on three components: automatic ingest and update of
   data sources; continuous curation of the information by the editorial team and
   – most important – contributions from its users, the SSH research community.
-* **Community** – The content available in the SSH Open Marketplace and its
+- **Community** – The content available in the SSH Open Marketplace and its
   contextualisation is the result of collaborative work that is characterised by
   a user-centric view. Features that allow contributions, feedback and comments
   are implemented – or will be soon – to ensure that the portal mirrors real
   research practices.
-* **Contextualisation** – The portal puts all items into context: each solution
+- **Contextualisation** – The portal puts all items into context: each solution
   suggested is linked to other related resources (e.g. a tutorial showing how to
   use a tool, a tool used in a workflow, a publication presenting research
   results produced using a given service). This contextualisation reinforces
@@ -49,9 +50,11 @@ Open Marketplace supplements the existing services offered by EOSC (e.g. EOSC
 Catalogue & Marketplace) and aims to facilitate fluid exchange of tools,
 services, data and knowledge.
 
-![SSHOC Project Structure diagram](/assets/images/sshoc_project_structure_about1.png "SSHOC Project Structure ")
+![SSHOC Project Structure diagram](/assets/images/sshoc_project_structure_about1.png 'SSHOC Project Structure')
 
-*Source: Versic Ilijasic, Ivana, & Dekker, Ron. (2020, March 4). SSHOC – Position paper 2020 (Version v1.0). Zenodo. [http://doi.org/10.5281/zenodo.3697121](<Source: Versic Ilijasic, Ivana, & Dekker, Ron. (2020, March 4). SSHOC – Position paper 2020 (Version v1.0). Zenodo. http://doi.org/10.5281/zenodo.3697121>)*
+_Source: Versic Ilijasic, Ivana, & Dekker, Ron. (2020, March 4). SSHOC –
+Position paper 2020 (Version v1.0). Zenodo.
+[http://doi.org/10.5281/zenodo.3697121](<Source: Versic Ilijasic, Ivana, & Dekker, Ron. (2020, March 4). SSHOC – Position paper 2020 (Version v1.0). Zenodo. http://doi.org/10.5281/zenodo.3697121>)_
 
 ### Lifting the SSH Open Marketplace into the Cloud
 
@@ -64,8 +67,8 @@ attention will be paid to the integration of the Marketplace with other EOSC
 catalogues and/ or marketplace(s). Beyond this task force, the SSH Open
 Marketplace is built following recommendations and outputs of
 [SSHOC WP3](https://sshopencloud.eu/publications/deliverables?field_wp_tid%5B%5D=14),
-led by CLARIN, that aims at “Lifting Technologies and Services into the SSH
-Cloud”.
+led by CLARIN, that aims at "Lifting Technologies and Services into the SSH
+Cloud".
 
 ### ERICs contributions
 
@@ -73,6 +76,7 @@ In the current governance scheme, 5 ERICs are foreseen to contribute to the SSH
 Open Marketplace sustainability after the SSHOC project.
 
 <div class="grid grid-cols-5">
+
 
 <a href="https://www.cessda.eu">
   <img src="/assets/images/cessda-logo.png" />
@@ -91,3 +95,4 @@ Open Marketplace sustainability after the SSHOC project.
 </a>
 
 </div>
+
