fix: don't auto-format markdown image title quotes

--- a/content/pages/about.mdx
+++ b/content/pages/about.mdx
@@ -50,7 +50,7 @@ Open Marketplace supplements the existing services offered by EOSC (e.g. EOSC
 Catalogue & Marketplace) and aims to facilitate fluid exchange of tools,
 services, data and knowledge.
 
-![SSHOC Project Structure diagram](/assets/images/sshoc_project_structure_about1.png 'SSHOC Project Structure')
+![SSHOC Project Structure diagram](/assets/images/sshoc_project_structure_about1.png "SSHOC Project Structure")
 
 _Source: Versic Ilijasic, Ivana, & Dekker, Ron. (2020, March 4). SSHOC –
 Position paper 2020 (Version v1.0). Zenodo.
