--- a/content/pages/contact.mdx
+++ b/content/pages/contact.mdx
@@ -1,4 +1,7 @@
 ---
 title: Contact
 ---
-For any questions related to the development of the SSH Open Marketplace, do not hesitate to contact us via the form below or directly at [sshopenmarketplace@sshopencloud.eu](mailto:sshopenmarketplace@sshopencloud.eu).
+
+For any questions related to the development of the SSH Open Marketplace, do not
+hesitate to contact us via the form below or directly at
+[sshopenmarketplace@sshopencloud.eu](mailto:sshopenmarketplace@sshopencloud.eu).
