--- a/content/pages/implementation.mdx
+++ b/content/pages/implementation.mdx
@@ -25,7 +25,7 @@ transformation of parts of the data (e.g. connecting terms from the source to a
 vocabulary like TaDiRAH) and the integration of the processed data into the SSH
 Open Marketplace via the API.
 
-![Data ingestion workflow](/assets/images/data_ingestion_workflow.png 'Data ingestion workflow')
+![Data ingestion workflow](/assets/images/data_ingestion_workflow.png "Data ingestion workflow")
 
 _Illustration: Overview on the different parts of the ingestion workflow_
 
