--- a/content/pages/service.mdx
+++ b/content/pages/service.mdx
@@ -1,6 +1,7 @@
 ---
 title: About the service
 ---
+
 ## Sources
 
 During the development phase of the SSH Open Marketplace, we identified and
@@ -13,18 +14,19 @@ from the following sources:
 
 <div style={{ display: 'grid', gridTemplateColumns: '150px 1fr', gap: '2rem 1rem' }}>
 
-![TAPoR logo](/assets/images/source_TAPoR_logo.png 'TAPoR logo')
+
+![TAPoR logo](/assets/images/source_TAPoR_logo.png "TAPoR logo")
 
 [TAPoR](http://tapor.ca/home) is a long-standing gateway to tools used for text
 analysis and retrieval.
 
-![Programming Historian logo](/assets/images/ph-en.svg 'Programming Historian logo')
+![Programming Historian logo](/assets/images/ph-en.svg "Programming Historian logo")
 
 The [Programming Historian](https://programminghistorian.org/) publishes
 novice-friendly, peer-reviewed tutorials that help humanists learn a wide range
 of digital tools, techniques, and workflows to facilitate research and teaching.
 
-![Standardization Survival Kit logo](/assets/images/source_ssk_logo.svg 'Standardization Survival Kit logo')
+![Standardization Survival Kit logo](/assets/images/source_ssk_logo.svg "Standardization Survival Kit logo")
 
 The [Standardisation Survival Kit](http://ssk.huma-num.fr/#/) presents a
 collection of research use case scenarios illustrating best practices in Digital
@@ -35,14 +37,14 @@ Humanities and Heritage research.
 The [Language Resource Switchboard](https://switchboard.clarin.eu/) helps you
 find tools that can process your data.
 
-![dblp computer science bibliography logo](/assets/images/source_dblp_logo_320x120.png 'dblp computer science bibliography logo')
+![dblp computer science bibliography logo](/assets/images/source_dblp_logo_320x120.png "dblp computer science bibliography logo")
 
 The [dblp computer science bibliography](https://dblp.org/) provides open
 bibliographic information on major computer science journals and
 proceedings. Only a subset of publications related to digital humanities is
 being ingested in the SSH Open Marketplace.
 
-![EOSC logo](/assets/images/source_eosc_logo.png 'EOSC logo')
+![EOSC logo](/assets/images/source_eosc_logo.png "EOSC logo")
 
 The [EOSC Portal catalogue & marketplace](https://marketplace.eosc-portal.eu/)
 is an integrated platform that allows easy access to plenty of services and
@@ -51,6 +53,7 @@ tools. Only a subset of resources, relevant for Social Sciences and Humanities,
 is being ingested in the SSH Open Marketplace.
 
 </div>
+
 
 Linguistic, social sciences and cultural heritage sources will be added in 2021.
 Manual and individual additions of content is also a way to further populate the
@@ -64,9 +67,11 @@ content led to the identification of 5 main types of content:
 
 <div style={{ display: 'grid', gridTemplateColumns: '60px 1fr', columnGap: '1rem' }}>
 
-![Tool or service](/assets/images/categories/tool-or-service.svg 'Tool or service logo')
+
+![Tool or service](/assets/images/categories/tool-or-service.svg "Tool or service logo")
 
 <div>
+
 
 ### Tools & services
 
@@ -80,11 +85,14 @@ graphs and networks
 </div>
 </div>
 
+
 <div style={{ display: 'grid', gridTemplateColumns: '60px 1fr', columnGap: '1rem' }}>
 
-![Training Material](/assets/images/categories/training-material.svg 'Training Material')
+
+![Training Material](/assets/images/categories/training-material.svg "Training Material")
 
 <div>
+
 
 ### Training materials
 
@@ -96,11 +104,14 @@ Programming Historian website.
 </div>
 </div>
 
+
 <div style={{ display: 'grid', gridTemplateColumns: '60px 1fr', columnGap: '1rem' }}>
 
-![Workflow](/assets/images/categories/workflow.svg 'Workflow logo')
+
+![Workflow](/assets/images/categories/workflow.svg "Workflow logo")
 
 <div>
+
 
 ### Workflows
 
@@ -114,11 +125,14 @@ from the Standardization Survival Kit.
 </div>
 </div>
 
+
 <div style={{ display: 'grid', gridTemplateColumns: '60px 1fr', columnGap: '1rem' }}>
 
-![Dataset](/assets/images/categories/dataset.svg 'Dataset logo')
+
+![Dataset](/assets/images/categories/dataset.svg "Dataset logo")
 
 <div>
+
 
 ### Datasets
 
@@ -130,11 +144,14 @@ Parlamint 1.0
 </div>
 </div>
 
+
 <div style={{ display: 'grid', gridTemplateColumns: '60px 1fr', columnGap: '1rem' }}>
 
-![Publication](/assets/images/categories/publication.svg 'Publication logo')
+
+![Publication](/assets/images/categories/publication.svg "Publication logo")
 
 <div>
+
 
 ### Publications
 
@@ -151,25 +168,26 @@ Open Marketplace).
 </div>
 </div>
 
+
 ## Main functionalities
 
 In this beta version of the SSH Open Marketplace, you can:
 
-* search among the resources, refining what you are looking for through faceted
+- search among the resources, refining what you are looking for through faceted
   search
   ![screenshot search resources](/assets/images/search-refine-screenshot.png "screenshot search resources")
-* browse the content, by activities or keywords
+- browse the content, by activities or keywords
   ![browsing screenshot](/assets/images/browse_activities_screenshot.png "browsing screenshot")
-* obtain a detailed view of every item registered in the website, including a
+- obtain a detailed view of every item registered in the website, including a
   structured set of metadata describing the resource, and highlighting the
   related items to facilitate the discovery of relevant resources
   ![detailed view screenshot](/assets/images/details-related-screenshot.jpg "detailed view screenshot")
-* report issues. While waiting for more community features – such as the
+- report issues. While waiting for more community features – such as the
   editorial components or the comments section – to be implemented in 2021, the
   beta release of the SSH Open Marketplace offers you the possibility to report
   issues on every page of the website. Help us to improve our content or to
   report a bug, using this temporary functionality!
-* re-use the SSH Open Marketplace content using the Application programming
+- re-use the SSH Open Marketplace content using the Application programming
   Interface (API). See the API documentation in the "technical aspects" section,
   if you want to know more.
 
@@ -249,6 +267,6 @@ by reviewing new items and ensuring the editorial policy's implementation.
 Moderators are key actors of the SSH Open Marketplace! Let us know if you would
 be interested to join the SSH Open Marketplace editorial board!
 
-*Because we believe that community efforts should not mean voluntary work, we
+_Because we believe that community efforts should not mean voluntary work, we
 are investigating different paths for incentives and rewards for SSH Open
-Marketplace contributors and moderators.*
+Marketplace contributors and moderators._
