--- a/content/pages/team.mdx
+++ b/content/pages/team.mdx
@@ -1,18 +1,29 @@
 ---
 title: The team behind the Marketplace
 ---
-The concept, design and development of the SSH Open Marketplace has been carried out by SSHOC WP7 members
 
-* **[DARIAH ERIC](https://www.dariah.eu/)**: Frank Fischer, Yoann Moranville, Laure Barbot, Eliza Papaki, Erzsébet Toth-Czifra
-* **[CESSDA ERIC](https://www.cessda.eu/)**: Carsten Thiel
-* **[CLARIN ERIC](https://www.clarin.eu/)**: Dieter van Uytvanck, Alexander König
-* **[PSNC](https://www.psnc.pl/)**: Tomasz Parkoła, Michał Kozak, Szymon Wolarz, Justyna Wytrążek, Ola Nowak
-* **[OEAW](https://www.oeaw.ac.at/acdh/)**: Matej Durco, Stefan Probst, Klaus Illmayer, Seung-Bin Yim
-* **[UGOE](https://www.sub.uni-goettingen.de/sub-aktuell/)** & **[GWDG](https://www.gwdg.de/)**: Philipp Wieder, Stefan Buddenbohm, Alireza Zarei
-* **[TRUST-IT](https://www.trust-itservices.com/)**: Marieke Willems, Leonardo Marino, Tracey Biller, Filomena Minichiello
-* **[SWC](https://semantic-web.com/)**: Martin Kaltenböck, Sotiris Karampatakis
-* **[CNRS/Huma-Num](https://www.huma-num.fr/)**: Nicolas Larrousse, Clara Petitfils, Suzanne Dumouchel
-* **[CNR](https://www.isti.cnr.it/en/)**: Cesare Concordia
-* **[FORTH](https://www.ics.forth.gr/isl/centre-cultural-informatics)**: Chryssoula Bekiari, Athina Kritsotaki
+The concept, design and development of the SSH Open Marketplace has been carried
+out by SSHOC WP7 members
+
+- **[DARIAH ERIC](https://www.dariah.eu/)**: Frank Fischer, Yoann Moranville,
+  Laure Barbot, Eliza Papaki, Erzsébet Toth-Czifra
+- **[CESSDA ERIC](https://www.cessda.eu/)**: Carsten Thiel
+- **[CLARIN ERIC](https://www.clarin.eu/)**: Dieter van Uytvanck, Alexander
+  König
+- **[PSNC](https://www.psnc.pl/)**: Tomasz Parkoła, Michał Kozak, Szymon Wolarz,
+  Justyna Wytrążek, Ola Nowak
+- **[OEAW](https://www.oeaw.ac.at/acdh/)**: Matej Durco, Stefan Probst, Klaus
+  Illmayer, Seung-Bin Yim
+- **[UGOE](https://www.sub.uni-goettingen.de/sub-aktuell/)** &
+  **[GWDG](https://www.gwdg.de/)**: Philipp Wieder, Stefan Buddenbohm, Alireza
+  Zarei
+- **[TRUST-IT](https://www.trust-itservices.com/)**: Marieke Willems, Leonardo
+  Marino, Tracey Biller, Filomena Minichiello
+- **[SWC](https://semantic-web.com/)**: Martin Kaltenböck, Sotiris Karampatakis
+- **[CNRS/Huma-Num](https://www.huma-num.fr/)**: Nicolas Larrousse, Clara
+  Petitfils, Suzanne Dumouchel
+- **[CNR](https://www.isti.cnr.it/en/)**: Cesare Concordia
+- **[FORTH](https://www.ics.forth.gr/isl/centre-cultural-informatics)**:
+  Chryssoula Bekiari, Athina Kritsotaki
 
 Please use the contact form if you want to get in touch.
