fix: use tailwind typography for static mdx

--- a/content/pages/service.mdx
+++ b/content/pages/service.mdx
@@ -1,11 +1,19 @@
 ---
 title: About the service
 ---
+
 ## Sources
 
-During the development phase of the SSH Open Marketplace, we identified and prioritised trusted sources from which to gather information to populate the SSH Open Marketplace. In an initial onboarding phase (first half of 2020), 1,500 individual resources – tools and services, training materials and workflows - were ingested.  After an extended population phase (second half of 2020), the Beta version of the Marketplace now includes over 5,000 individual items. The sources are listed below.
+During the development phase of the SSH Open Marketplace, we identified and
+prioritised trusted sources from which to gather information to populate the SSH
+Open Marketplace. In an initial onboarding phase (first half of 2020), 1,500
+individual resources – tools and services, training materials and workflows -
+were ingested.  After an extended population phase (second half of 2020), the
+Beta version of the Marketplace now includes over 5,000 individual items. The
+sources are listed below.
 
-<div style={{ display: 'grid', gridTemplateColumns: '150px 1fr', gap: '2rem 1rem' }}>
+<div className="grid" style={{ gridTemplateColumns: '150px 1fr', gap: '2rem 1rem' }}>
+
 
 ![TAPoR logo](/assets/images/source_TAPoR_logo.png "TAPoR logo")
 
@@ -46,151 +54,218 @@ is being ingested in the SSH Open Marketplace.
 
 </div>
 
-During the course of 2021, linguistic, social sciences, and cultural heritage sources will be added. Manual and individual additions of content will also be possible (see "How to contribute" below).
+
+During the course of 2021, linguistic, social sciences, and cultural heritage
+sources will be added. Manual and individual additions of content will also be
+possible (see "How to contribute" below).
 
 ## Types of content
 
-The conceptual approach used to structure and classify the content of the SSH Open Marketplace led to the identification of 5 main content types.
+The conceptual approach used to structure and classify the content of the SSH
+Open Marketplace led to the identification of 5 main content types.
 
-<div style={{ display: 'grid', gridTemplateColumns: '60px 1fr', columnGap: '1rem' }}>
+<div className="grid" style={{ gridTemplateColumns: '60px 1fr', columnGap: '1rem' }}>
+
 
 ![Tool or service](/assets/images/categories/tool-or-service.svg "Tool or service logo")
 
 <div>
 
+
 ### Tools & services
 
 Materials or products used to perform activities such as:
 
-* Desktop clients solutions (to be installed locally)
-* Browser-based or command-line based resources
-* Mobile apps
-* Programming libraries or APIs
-* Data catalogues
+- Desktop clients solutions (to be installed locally)
+- Browser-based or command-line based resources
+- Mobile apps
+- Programming libraries or APIs
+- Data catalogues
 
-*Example*: Gephi is a visualisation and exploration software for all kinds of graphs and networks.
+_Example_: Gephi is a visualisation and exploration software for all kinds of
+graphs and networks.
 
 </div>
 </div>
 
-<div style={{ display: 'grid', gridTemplateColumns: '60px 1fr', columnGap: '1rem' }}>
+
+<div className="grid" style={{ gridTemplateColumns: '60px 1fr', columnGap: '1rem' }}>
+
 
 ![Training Material](/assets/images/categories/training-material.svg "Training Material")
 
 <div>
 
+
 ### Training materials
 
-Tutorials, lessons or didactic resources explaining how to perform an action or highlighting the learning outcomes one would gain from engaging with the material.
+Tutorials, lessons or didactic resources explaining how to perform an action or
+highlighting the learning outcomes one would gain from engaging with the
+material.
 
-*Example*: The lesson “Beginner's Guide to Twitter Data” (Programming Historian website).
+_Example_: The lesson “Beginner's Guide to Twitter Data” (Programming Historian
+website).
 
 </div>
 </div>
 
-<div style={{ display: 'grid', gridTemplateColumns: '60px 1fr', columnGap: '1rem' }}>
+
+<div className="grid" style={{ gridTemplateColumns: '60px 1fr', columnGap: '1rem' }}>
+
 
 ![Workflow](/assets/images/categories/workflow.svg "Workflow logo")
 
 <div>
 
+
 ### Workflows
 
-Sequences of operation/steps performed on research data during their lifecycle. Workflows can be achieved by using diverse tools and facilities, and useful resources are connected to each step.
+Sequences of operation/steps performed on research data during their lifecycle.
+Workflows can be achieved by using diverse tools and facilities, and useful
+resources are connected to each step.
 
-*Example*: “Extract textual content from images” is a workflow composed of 13 steps coming from the Standardization Survival Kit.
+_Example_: “Extract textual content from images” is a workflow composed of 13
+steps coming from the Standardization Survival Kit.
 
 </div>
 </div>
 
-<div style={{ display: 'grid', gridTemplateColumns: '60px 1fr', columnGap: '1rem' }}>
+
+<div className="grid" style={{ gridTemplateColumns: '60px 1fr', columnGap: '1rem' }}>
+
 
 ![Dataset](/assets/images/categories/dataset.svg "Dataset logo")
 
 <div>
 
+
 ### Datasets
 
-Single digital objects or collections of data, records, or information that is kept as a persistent unit of information  in  the  knowledge  generation  process.  Datasets  are  used  as  evidence  for  some phenomena.
+Single digital objects or collections of data, records, or information that is
+kept as a persistent unit of information  in  the  knowledge  generation 
+process.  Datasets  are  used  as  evidence  for  some phenomena.
 
-*Example*: Parlamint 1.0
+_Example_: Parlamint 1.0
 
 </div>
 </div>
 
-<div style={{ display: 'grid', gridTemplateColumns: '60px 1fr', columnGap: '1rem' }}>
+
+<div className="grid" style={{ gridTemplateColumns: '60px 1fr', columnGap: '1rem' }}>
+
 
 ![Publication](/assets/images/categories/publication.svg "Publication logo")
 
 <div>
 
+
 ### Publications
 
-Research results published in academic journals or repositories. The SSH Open Marketplace references only publications that can be connected to other resources and is not an exhaustive collection of papers.
+Research results published in academic journals or repositories. The SSH Open
+Marketplace references only publications that can be connected to other
+resources and is not an exhaustive collection of papers.
 
-*Example*: “PoetryLab. An Open Source Toolkit for the Analysis of Spanish Poetry Corpora” is a Conference Paper presented during the DH2020 Conference in which you can find an example of use of the SpaCy library (referenced as a tool in the SSH Open Marketplace).
+_Example_: “PoetryLab. An Open Source Toolkit for the Analysis of Spanish Poetry
+Corpora” is a Conference Paper presented during the DH2020 Conference in which
+you can find an example of use of the SpaCy library (referenced as a tool in the
+SSH Open Marketplace).
 
 </div>
 </div>
+
 
 ## Main functionalities
 
 In this beta version of the SSH Open Marketplace, you can:
 
-* Search the resources, refining your query through faceted search. Note that for this Beta version, work on curating over 5,000 individual records listed is still underway and will continue for some months.
+- Search the resources, refining your query through faceted search. Note that
+  for this Beta version, work on curating over 5,000 individual records listed
+  is still underway and will continue for some months.
   ![screenshot search resources](/assets/images/search-refine-screenshot.png "screenshot search resources")
-* Browse the content by activities or keywords
+- Browse the content by activities or keywords
   ![browsing screenshot](/assets/images/browse_activities_screenshot.png "browsing screenshot")
-* Obtain a detailed view of every item registered in the website, including a
+- Obtain a detailed view of every item registered in the website, including a
   structured set of metadata describing the resource, and highlighting the
   related items to facilitate the discovery of relevant resources
   ![detailed view screenshot](/assets/images/details-related-screenshot.jpg "detailed view screenshot")
-* Report issues. While waiting for more community features – such as the editorial components or the comments section – to be implemented in 2021, the Beta release of the SSH Open Marketplace offers you the possibility to report issues on every page of the website. 
+- Report issues. While waiting for more community features – such as the
+  editorial components or the comments section – to be implemented in 2021, the
+  Beta release of the SSH Open Marketplace offers you the possibility to report
+  issues on every page of the website.
 
-  **Help us to improve our content or to report a bug using this temporary functionality!**
+  **Help us to improve our content or to report a bug using this temporary
+  functionality!**
 
   ### Note:
 
-  On this Beta version, you will encounter some issues that are known to our development team. You will see for example that some tools or services are referenced several times. We are working on these record duplicates. 
+  On this Beta version, you will encounter some issues that are known to our
+  development team. You will see for example that some tools or services are
+  referenced several times. We are working on these record duplicates.
 
-  Please also note that the website is not yet responsive when used with mobile devices. This is also something that will be implemented in the upcoming months.
-* Re-use the SSH Open Marketplace content using the Application programming
-  Interface (API). See the API documentation in the ["technical aspects" section](/implementation),
-  if you want to know more.
+  Please also note that the website is not yet responsive when used with mobile
+  devices. This is also something that will be implemented in the upcoming
+  months.
+
+- Re-use the SSH Open Marketplace content using the Application programming
+  Interface (API). See the API documentation in the
+  ["technical aspects" section](/implementation), if you want to know more.
 
 ## Content Curation Guidelines
 
 ### Data Population and Curation
 
-Because we believe that accurate and up-to-date content is key to making the SSH Open Marketplace a rich and useful discovery portal, data population and curation are at the heart of our work. Once (meta)data have been ingested in the Marketplace, we curate and enrich them thanks to a hybrid approach: automatic checks are run on the ingested data, followed by manual review of the identified problems as well as of aspects that cannot be checked automatically. In this process, contributors and moderators are playing an essential role (See “How to contribute” below).
+Because we believe that accurate and up-to-date content is key to making the SSH
+Open Marketplace a rich and useful discovery portal, data population and
+curation are at the heart of our work. Once (meta)data have been ingested in the
+Marketplace, we curate and enrich them thanks to a hybrid approach: automatic
+checks are run on the ingested data, followed by manual review of the identified
+problems as well as of aspects that cannot be checked automatically. In this
+process, contributors and moderators are playing an essential role (See “How to
+contribute” below).
 
 ### Curation Criteria
 
 Currently the curation criteria fall into three categories.
 
-1. **Scientific** 
+1. **Scientific**
 
-   The broad scope of the SSH Open Marketplace means that to be selected, any resource must fulfill at least two criteria:
+   The broad scope of the SSH Open Marketplace means that to be selected, any
+   resource must fulfill at least two criteria:
 
-   * Relevance for science and scientists
-   * Pertinence to the digital methodologies used within the SSH landscape 
+   - Relevance for science and scientists
+   - Pertinence to the digital methodologies used within the SSH landscape
 
-   Selection decisions are made by  Moderators. Particularly for resources such as technical services or software, the SSH link could be very loose. In such cases the relevance may be assessed in terms of the uptake or prominence of a resource within the SSH community.
+   Selection decisions are made by  Moderators. Particularly for resources such
+   as technical services or software, the SSH link could be very loose. In such
+   cases the relevance may be assessed in terms of the uptake or prominence of a
+   resource within the SSH community.
+
 2. **Technical**
 
    Ideally, two technical curation criteria should be met by any resource:
 
-   * Current and supported
-   * Open
+   - Current and supported
+   - Open
 
-   The SSH Open Marketplace favours the uptake of Open Science workflows and open research practices. Software resources are preferably built upon open source solutions. 
+   The SSH Open Marketplace favours the uptake of Open Science workflows and
+   open research practices. Software resources are preferably built upon open
+   source solutions.
 
-   Note: Given that the SSH Open Marketplace seeks to  mirror actual research practices, commercial or non-current resources are also referenced where these are relevant for the scientific community.
+   Note: Given that the SSH Open Marketplace seeks to  mirror actual research
+   practices, commercial or non-current resources are also referenced where
+   these are relevant for the scientific community.
+
 3. **Legal/Ethical**
 
-   By design, the SSH Open Marketplace maximises the findability and re-use of data in line with the **FAIR principles** – Findable, Accessible, Interoperable and Re-usable – for research data, and guides users towards tools, services or training materials that can help them in their FAIRification workflows. 
+   By design, the SSH Open Marketplace maximises the findability and re-use of
+   data in line with the **FAIR principles** – Findable, Accessible,
+   Interoperable and Re-usable – for research data, and guides users towards
+   tools, services or training materials that can help them in their
+   FAIRification workflows.
 
-   Of necessity, the SSH Open Marketplace is  GDPR compliant . This is reflected in the manner of presentation of the resources and – more obviously – in the management of users.
+   Of necessity, the SSH Open Marketplace is  GDPR compliant . This is reflected
+   in the manner of presentation of the resources and – more obviously – in the
+   management of users.
 
 During the course of  2021, **Editorial Guidelines** will be added to this page.
 
@@ -198,12 +273,25 @@ During the course of  2021, **Editorial Guidelines** will be added to this page
 
 ### Becoming a contributor
 
-In a few months’ time, you will be able to suggest new content for the SSH Open Marketplace and propose changes to existing items via user-friendly edit forms. In the meantime, please  use the “Report an issue” function available on all pages of the website to improve our content or to report a bug. 
+In a few months’ time, you will be able to suggest new content for the SSH Open
+Marketplace and propose changes to existing items via user-friendly edit forms.
+In the meantime, please  use the “Report an issue” function available on all
+pages of the website to improve our content or to report a bug.
 
-To remain updated about developments, and to be aware of events and hands-on sessions to be organised in 2021, click here to register on the [SSHOC website](https://www.sshopencloud.eu/user/register) and join the SSH Open Marketplace Tester Community.
+To remain updated about developments, and to be aware of events and hands-on
+sessions to be organised in 2021, click here to register on the
+[SSHOC website](https://www.sshopencloud.eu/user/register) and join the SSH Open
+Marketplace Tester Community.
 
 ### Becoming a moderator
 
-Towards the end of 2021, the editorial board of the SSH Open Marketplace will also be created! Its mission will be to ensure the quality of the Marketplace content by reviewing new items and ensuring the implementation of editorial policy. Moderators are key actors in the SSH Open Marketplace! [Let us know](/contact) if you would be interested in joining the SSH Open Marketplace Editorial Board!
+Towards the end of 2021, the editorial board of the SSH Open Marketplace will
+also be created! Its mission will be to ensure the quality of the Marketplace
+content by reviewing new items and ensuring the implementation of editorial
+policy. Moderators are key actors in the SSH Open Marketplace!
+[Let us know](/contact) if you would be interested in joining the SSH Open
+Marketplace Editorial Board!
 
-*Because we believe that community efforts should not mean voluntary work, we are investigating different paths for incentives and rewards for SSH Open Marketplace Contributors and Moderators.*
+_Because we believe that community efforts should not mean voluntary work, we
+are investigating different paths for incentives and rewards for SSH Open
+Marketplace Contributors and Moderators._
