--- a/content/pages/about.mdx
+++ b/content/pages/about.mdx
@@ -1,39 +1,82 @@
 ---
 title: What is the SSH Open Marketplace?
 ---
-The Social Sciences and Humanities Open Marketplace, built as part of the [Social Sciences and Humanities Open Cloud project (SSHOC)](https://www.sshopencloud.eu/), is a discovery portal which pools and contextualises resources for Social Sciences and Humanities research communities: tools, services, training materials, datasets and workflows. The Marketplace highlights and showcases solutions and research practices for every step of the SSH research data life cycle.
 
-*The SSH Open Marketplace is currently under development. You are currently visiting the beta version released in December 2020. The final release is scheduled for December 2021.*
+The Social Sciences and Humanities Open Marketplace, built as part of the
+[Social Sciences and Humanities Open Cloud project (SSHOC)](https://www.sshopencloud.eu/),
+is a discovery portal which pools and contextualises resources for Social
+Sciences and Humanities research communities: tools, services, training
+materials, datasets and workflows. The Marketplace highlights and showcases
+solutions and research practices for every step of the SSH research data life
+cycle.
+
+_The SSH Open Marketplace is currently under development. You are currently
+visiting the beta version released in December 2020. The final release is
+scheduled for December 2021._
 
 ## Key aspects
 
-* **Curation** – This portal thrives on a curation process that makes it easy to discover the most appropriate results for each request, so that researchers can discover the best resources for the digital aspects of their work. The curation process relies on three components: automatic ingest and update of data sources; continuous curation of the information by the editorial team and – most important – contributions from users, the SSH research community.
-* **Community** – The content available in the SSH Open Marketplace and its contextualisation is the result of collaborative work that is characterised by a user-centric approach. Features that allow contributions, feedback and comments are implemented – or will be soon – to ensure that the portal mirrors real research practices.
-* **Contextualisation** – The portal puts all items into context: each solution suggested is linked to other related resources (e.g. a tutorial showing how to use a tool, a tool used in a workflow, a publication presenting research results produced using a given service). This contextualisation enhances the usefulness of the SSH Open Marketplace and ensures users  receive the maximum possible benefit from all its contents.
+- **Curation** – This portal thrives on a curation process that makes it easy to
+  discover the most appropriate results for each request, so that researchers
+  can discover the best resources for the digital aspects of their work. The
+  curation process relies on three components: automatic ingest and update of
+  data sources; continuous curation of the information by the editorial team and
+  – most important – contributions from users, the SSH research community.
+- **Community** – The content available in the SSH Open Marketplace and its
+  contextualisation is the result of collaborative work that is characterised by
+  a user-centric approach. Features that allow contributions, feedback and
+  comments are implemented – or will be soon – to ensure that the portal mirrors
+  real research practices.
+- **Contextualisation** – The portal puts all items into context: each solution
+  suggested is linked to other related resources (e.g. a tutorial showing how to
+  use a tool, a tool used in a workflow, a publication presenting research
+  results produced using a given service). This contextualisation enhances the
+  usefulness of the SSH Open Marketplace and ensures users  receive the maximum
+  possible benefit from all its contents.
 
 ## A Thematic Contribution to the European Open Science Cloud
 
 ### SSHOC & EOSC
 
-SSHOC is one of the activities foreseen under INFRAEOSC 04-2018, which supports the integration and consolidation of thematic e-infrastructure platforms in preparation for connecting them to the [European Open Science Cloud (EOSC)](https://sshopencloud.eu/sshoc-eosc). The overall objective of the SSHOC project is to realise the Social Sciences and Humanities part of EOSC.
+SSHOC is one of the activities foreseen under INFRAEOSC 04-2018, which supports
+the integration and consolidation of thematic e-infrastructure platforms in
+preparation for connecting them to the
+[European Open Science Cloud (EOSC)](https://sshopencloud.eu/sshoc-eosc). The
+overall objective of the SSHOC project is to realise the Social Sciences and
+Humanities part of EOSC.
 
-As a domain-oriented discovery portal and the aggregator of the SSHOC project, the SSH Open Marketplace, contributes directly to the EOSC, supplementing  existing services such as the EOSC Catalogue & Marketplace, and  facilitating the fluid exchange of tools, services, data,and knowledge.
+As a domain-oriented discovery portal and the aggregator of the SSHOC project,
+the SSH Open Marketplace, contributes directly to the EOSC, supplementing 
+existing services such as the EOSC Catalogue & Marketplace, and  facilitating
+the fluid exchange of tools, services, data,and knowledge.
 
 ![SSHOC Project Structure diagram](/assets/images/sshoc_project_structure_about1.png "SSHOC Project Structure")
 
-*Source: Versic Ilijasic, Ivana, & Dekker, Ron. (2020, March 4). SSHOC –
+_Source: Versic Ilijasic, Ivana, & Dekker, Ron. (2020, March 4). SSHOC –
 Position paper 2020 (Version v1.0). Zenodo.
-[http://doi.org/10.5281/zenodo.3697121](<Source: Versic Ilijasic, Ivana, & Dekker, Ron. (2020, March 4). SSHOC – Position paper 2020 (Version v1.0). Zenodo. http://doi.org/10.5281/zenodo.3697121>)*
+[http://doi.org/10.5281/zenodo.3697121](<Source: Versic Ilijasic, Ivana, & Dekker, Ron. (2020, March 4). SSHOC – Position paper 2020 (Version v1.0). Zenodo. http://doi.org/10.5281/zenodo.3697121>)_
 
 ### Lifting the SSH Open Marketplace into the Cloud
 
-The SSH Open Marketplace will be fully integrated in the EOSC landscape, for example by using EOSC Core services, such as the Federated Identity (AAI) services or the EOSC helpdesk. A SSHOC task force is working on means to harmonise views on common themes and foster contact with other European and international organisations operating in the EOSC environment. Specific attention will be paid to the integration of the Marketplace with other EOSC catalogues and/ or marketplace(s). In addition, theSSH Open Marketplace will benefit from  the recommendations and outputs of [SSHOC WP3](https://sshopencloud.eu/publications/deliverables?field_wp_tid%5B%5D=14), “Lifting Technologies and Services into the SSH Cloud” led by SSHOC partner CLARIN.
+The SSH Open Marketplace will be fully integrated in the EOSC landscape, for
+example by using EOSC Core services, such as the Federated Identity (AAI)
+services or the EOSC helpdesk. A SSHOC task force is working on means to
+harmonise views on common themes and foster contact with other European and
+international organisations operating in the EOSC environment. Specific
+attention will be paid to the integration of the Marketplace with other EOSC
+catalogues and/ or marketplace(s). In addition, theSSH Open Marketplace will
+benefit from  the recommendations and outputs of
+[SSHOC WP3](https://sshopencloud.eu/publications/deliverables?field_wp_tid%5B%5D=14),
+"Lifting Technologies and Services into the SSH Cloud" led by SSHOC partner
+CLARIN.
 
 ### ERIC Contributions
 
-In the current governance scheme, 5 ERICs will ensure the continuity of the  SSH Open Marketplace beyond the lifetime of the SSHOC project.
+In the current governance scheme, 5 ERICs will ensure the continuity of the  SSH
+Open Marketplace beyond the lifetime of the SSHOC project.
 
 <div class="grid grid-cols-5">
+
 
 <a href="https://www.cessda.eu">
   <img src="/assets/images/cessda-logo.png" />
@@ -52,3 +95,4 @@ In the current governance scheme, 5 ERICs will ensure the continuity of the  SS
 </a>
 
 </div>
+
